@@ -87,9 +87,4 @@ public class TestVariantData extends ApkVariantData {
     public boolean getZipAlign() {
         return false;
     }
-
-    @Override
-    public boolean getRunProguard() {
-      return false;
-    }
 }
